[gd_scene load_steps=9 format=3 uid="uid://cyrs2va0ctt5j"]

[ext_resource type="FontFile" uid="uid://dfvkfjugp4cx1" path="res://Martian_Mono/MartianMono-VariableFont_wdth,wght.ttf" id="1_s2pc3"]
[ext_resource type="Script" path="res://taskvisuals.gd" id="1_un2mw"]
[ext_resource type="Texture2D" uid="uid://bgyl4wsbahf2a" path="res://icons/Lightexclamation(overdue).png" id="2_3sidf"]
[ext_resource type="Texture2D" uid="uid://b6mabth32b3eg" path="res://Lcheckbox/LightCheckedbox (1).png" id="2_q3gbs"]
[ext_resource type="Texture2D" uid="uid://5st7nbvqh0vo" path="res://Lcheckbox/LightUncheckedbox (1).png" id="3_bowda"]
[ext_resource type="Texture2D" uid="uid://cnotjgdhiv233" path="res://icons/Lightmegaphone(today).png" id="3_m6vv1"]
[ext_resource type="Texture2D" uid="uid://24jan4b4x2w" path="res://icons/Lighttimer(soon).png" id="4_y8yyl"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_rvcn7"]

[node name="task_lightmode" type="Control"]
material = SubResource("CanvasItemMaterial_rvcn7")
custom_minimum_size = Vector2(0, 60)
layout_mode = 3
anchors_preset = 0
offset_bottom = 60.0
script = ExtResource("1_un2mw")
metadata/_edit_use_anchors_ = true

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 1154.0
offset_bottom = 56.0

[node name="ClassNameRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 455.0
offset_top = 12.0
offset_right = 614.0
offset_bottom = 43.0
color = Color(1, 0.85098, 0.4, 1)

[node name="TypeNameRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 630.0
offset_top = 12.0
offset_right = 789.0
offset_bottom = 43.0
color = Color(1, 0.85098, 0.4, 1)

[node name="TaskName" type="Label" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 17.0
offset_right = 441.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_s2pc3")
text = "name of task (max 32 characters)"

[node name="ClassName" type="Label" parent="."]
layout_mode = 0
offset_left = 469.0
offset_top = 17.0
offset_right = 596.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_s2pc3")
text = "class name"

[node name="TypeName" type="Label" parent="."]
layout_mode = 0
offset_left = 642.0
offset_top = 17.0
offset_right = 769.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_s2pc3")
text = "type name"

[node name="Date" type="Label" parent="."]
layout_mode = 0
offset_left = 801.0
offset_top = 17.0
offset_right = 928.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_s2pc3")
text = "00/00/0000"

[node name="StartTime" type="Label" parent="."]
layout_mode = 0
offset_left = 938.0
offset_top = 17.0
offset_right = 1065.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_s2pc3")
text = "00:00
"

[node name="EndTime" type="Label" parent="."]
layout_mode = 0
offset_left = 1019.0
offset_top = 17.0
offset_right = 1146.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_s2pc3")
text = "00:00
"

[node name="OverdueImg" type="Sprite2D" parent="."]
visible = false
position = Vector2(1111.96, 25.4687)
scale = Vector2(0.0457465, 0.0457465)
texture = ExtResource("2_3sidf")

[node name="TodayImg" type="Sprite2D" parent="."]
visible = false
position = Vector2(1116.92, 26)
scale = Vector2(0.0371528, 0.0371528)
texture = ExtResource("3_m6vv1")

[node name="SoonImg" type="Sprite2D" parent="."]
visible = false
position = Vector2(1112.92, 26)
scale = Vector2(0.0451389, 0.0451389)
texture = ExtResource("4_y8yyl")

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 13.0
offset_right = 47.0
offset_bottom = 41.0
theme_override_icons/checked = ExtResource("2_q3gbs")
theme_override_icons/unchecked = ExtResource("3_bowda")
